--- a/page1.html
+++ b/page1.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="430">
+<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="517">
 
     
 
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/n">bootstrap modal popup</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="432">
+<section class="engine"><a href="https://mobirise.co/o">bootstrap button</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="519">
 
     
 
@@ -94,7 +94,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="6W56+pLBlIDb7kUHOQKEF1hs43ozIQIwyqays7V0yedwBPSq3o/ntx2hJ1G+lUuYMKL3Dpqh82PjfwqOMnitYmnuHoJ9F4iOSpuNyH2P9B4zgIB10pY1ItGCLelMM/9P">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="VAn2hxuYjYLkowscfFJVZCF/U3rwcIxuo4OxlRH1aeOb/ot2P467jFQeJRDRSqrFYU8kpgL/iJZ3HBCmL0R9MB1pXx8cNU+qh7twg3EFh3TiYcWTxgf/7YfGlRkqt0hx">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-7">
