--- a/page1.html
+++ b/page1.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="604">
+<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="691">
 
     
 
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/h">make your own website for free</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="606">
+<section class="engine"><a href="https://mobirise.co/p">bootstrap dropdown</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="693">
 
     
 
@@ -94,7 +94,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="FyM+CoHvqANeoCf3MkcKr3smsLI5t74dJ/I3xpiQ31YdHCzEGd0fLuBMCstJnF1wxCrHxj3HgrGRq4cdHjMrvFKCIqPoUVrYMXQxNt39W1EbtFwvB9RanBRaSBngTJ8l">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="kK9Lp7+TGQveLW9q4kbH8b764FdjanHxlzLN7HnUvJXTIFsP22NXX/ug7zYmHR5XDm2Qqk4so75PWaZ+JMVDzEI06+CaoOixqoEeAzmqQS9te919rvE6oWlz+2uc9EpW">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-7">
