--- a/page1.html
+++ b/page1.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="1129">
+<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="150">
 
     
 
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/g">create a website</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="1131">
+<section class="engine"><a href="https://mobirise.co">Mobirise</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="152">
 
     
 
@@ -94,7 +94,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="1BQAZ1nH1Y/hbbvmhQpbnUlJgXShyhvmP1yYIbKl4W/S+2H5eL29e9axGoysd3fAg4VWUHettQBbbQh7lYczwyU96n5nuCE4J8DUx0XRauNLsJkpvo7li0OVME1k7zyC">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="GX/RJSPOIXBxNLRmjmxN6yezmeSBFMyX2Qf9v27v607Txmqw9j2LCVmAln/VFF7eGOWqqV5r42Px/ObBC2EikFNT8JIsHa7BTHY+hWCd10QOytZA3ufMgDGO/e4Zfg2c">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-7">
