--- a/page1.html
+++ b/page1.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="320">
+<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="187">
 
     
 
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/o">bootstrap buttons</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="322">
+<section class="engine"><a href="https://mobirise.co/g">how to create a website</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="189">
 
     
 
@@ -94,7 +94,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="YhjR6oGMQsJMrguoH7xv25xAC5m/OuVN1YlcCUA5AOVHxwKUu70n3vskIWlENqsQy6RFERLshUlk2SGwWIigxGKk/27ow5EnZ9ISmjYPiJ5shqBRt3pXeJO1Jlz2cezY">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="s/jqCTg4mM7I3UgEy3INjO8/KyF9HLUnK04xyImBRaYgHpytG7a3ZoLPxty7cApGLeweTVqrZNLn+hS9T7Gb77EGu6pLFJGDMh0MsRul6rtZj3PRwJ18TcHKLv8ifOcv">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-7">
