--- a/page1.html
+++ b/page1.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="274">
+<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="146">
 
     
 
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/c">free web maker</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="276">
+<section class="engine"><a href="https://mobirise.co/p">bootstrap navbar</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="148">
 
     
 
@@ -94,7 +94,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="wDoUAIZBv+lmX5wgsJMTZFQqrAtCXp2GVPdQjH8wnR34aYdCGRiun++msPpuZipdu3DC2Ys6hCdnHOsBvCOHesyYO13/DCZmRKN7SVJgEAtIKGlnZfZpslhvMkhg1N50">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="m+VZCMFZXMMbdIM6dH+2dXLOsCiE69MHLLX7VHLCptJ6Rc9A3o9HZqG8Oc5BV2UlmRtbgGlZbrMQDLkRzs0i+IVXbFcL9yZZw8CCAah+UPr2pDhDtJzwTpr9GiSMFPKs">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-7">
