--- a/page1.html
+++ b/page1.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="233">
+<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="320">
 
     
 
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="235">
+<section class="engine"><a href="https://mobirise.co/n">bootstrap modal</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="322">
 
     
 
@@ -94,7 +94,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="L7aUMfeD4ynlwLz0ks7NTAgtltPcRDN1tx3k7c1Sm2CfqE9econM5HdzK9z0o138L+RGIXRPS5KDloTU0AW4o2l7+esGQtBspCewA7Jk+iSJ32ZX6I4t+wCZUx4zeZEl">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="IahUiDkI2QU3QTPGtvpI02Om6tlJPCxl74uWLnWqSXoNp3sQhiGIM02Bkogathq9wyITVIavlV6vyUulqyzkmCcWds2xEszs1H+dy4g9QqURnf/dbZGcvtLTC4Ai0X5i">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-7">
